--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,17 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <okhttp3.version>4.5.0</okhttp3.version>
-        <fastjson.version>1.2.47</fastjson.version>
+        <okhttp3.version>4.9.1</okhttp3.version>
+        <fastjson.version>1.2.76</fastjson.version>
         <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -82,7 +87,7 @@
         <dependency>
             <groupId>com.warrenstrange</groupId>
             <artifactId>googleauth</artifactId>
-            <version>1.2.0</version>
+            <version>1.5.0</version>
         </dependency>
 
     </dependencies>
